--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-svg": "^12.3.0",
+    "react-native-swipe-cards-deck": "0.3.0",
     "react-native-vector-icons": "9.1.0"
   },
   "devDependencies": {
