--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/native": "^6.0.10",
     "axios": "0.27.2",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
     "react-native-swipe-cards-deck": "0.3.0",
     "react-native-vector-icons": "9.1.0"
